force-app/main/default/objects/Candidate__c/validationRules/Zip_Code_match_the_state.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_match_the_state</fullName>
    <active>true</active>
    <errorConditionFormula>AND (VLOOKUP( $ObjectType.Zip_Code__c.Fields.State__c ,  $ObjectType.Zip_Code__c.Fields.Name ,  Zip_Postal_Code__c ) &lt;&gt;  State_Province__c, NOT(Batch_Load_Item__c))</errorConditionFormula>
    <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>Candidate Zip Code does not exist in specified State.</errorMessage>
</ValidationRule>