force-app/main/default/objects/Candidate__c/validationRules/Zip_code_must_be_Valid_US_Postal_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_code_must_be_Valid_US_Postal_Code</fullName>
    <active>true</active>
    <errorConditionFormula>(Country__c == &quot;USA&quot; || Country__c == &quot;US&quot;) &amp;&amp; NOT(REGEX(Zip_Postal_Code__c,&quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorDisplayField>Zip_Postal_Code__c</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format</errorMessage>
</ValidationRule>