force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Zip_Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>