force-app/main/default/objects/Candidate__c/listViews/Recruiter_Queue_Candidate.listView-meta.xml
<ListView>
    <fullName>Recruiter_Queue_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>Recruiter Queue</label>
    <queue>Recruiter_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>